mType/tests/testFiles/error/error/invalidMethodNameSpecialChar.mt
class TestClass {
    function my&Method(): void {
        print("test");
    }
}
